# conditional-method

./: .gitignore  LICENSE  README.md  hatch_build.py  noxfile.py  pyproject.toml  setup.py
examples/: cfg_attrs.py  env_mgmt.py  fastapi_auth.py  fastapi_auth_dev.py  fastapi_auth_prod.py  fastapi_auth_staging.py  scratchpad.py
src/conditional_method/: __init__.py  __lib.py  _lib.c  _logger.py  _py_lib.py  lib.py
tests/: Docker-test-all-vers.sh  Dockerfile-test-py3.8  benchmark.py  conftest.py  imports_fn.py  imports_fn_two.py  test_cfg.py  test_cfg_attr.py  test_conditional_method.py  test_conditional_methods.py  test_debug_mode.py  test_imports.py  test_logger.py
