[project]
name = "conditional-method"
version = "0.1.0"
description = "A decorator `@conditional_method` that selects a method implementation (among those that are identically named) for a class during class build time, leaving only the selected method in its attributes set when the class is built, i.e. 'well-formed'."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Jim Chng", email="jimchng@outlook.com" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
test = [
    "pytest>=8.3.4",
]

[tool.ruff.lint]
ignore = ["F811"]
