[project]
name = "conditional-method"
version = "0.1.0"
description = "A decorator `@conditional_method` that selects a method implementation (among those that are identically named) for a class during class build time, leaving only the selected method in its attributes set when the class is built, i.e. 'well-formed'."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Jim Chng", email="jimchng@outlook.com" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.2.9",
    "ruff>=0.9.9",
    "tomli>=2.0.1",
]
test = [
    "pytest>=8.3.4",
]
examples = [
    "fastapi>=0.115.10",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pyjwt>=2.9.0",
]

[tool.ruff.lint]
ignore = ["F811"]
